hphp/test/quick/dv_is.php.expectf

Fatal error: Default value for parameter a0 with type String needs to have the same type as the type hint int in %s on line 3
